_v1_(alb-ecs-aurora)/cloudformation/network.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: >
  Network stack for aws-ecommerce-infrastructure
  Creates VPC, subnets, IGW, route tables for main (AZ1) and pilot light (AZ2)


Parameters:

  ProjectName:
    Type: String
    Description: Project name prefix for resource naming
    Default: candy-store  # Delete Default

  Environment:
    Type: String
    Description: Deployment environment
    Default: dev  # Delete Default

  VpcCidr:
    Type: String
    Description: The CIDR block for the VPC
    Default: "10.0.0.0/16"  # Delete Default


Resources:

  # ----------------------
  # VPC & Gateway
  # ----------------------

  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidr
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-vpc"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-igw"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway


  # ----------------------
  # Subnets
  # ----------------------

  # 1 = ALB (& NAT)
  # 2 = ECS
  # 3 = DB
  # a = AZ1 (primary)
  # b = AZ2 (failover)

  PublicAlbSubnet1a:  
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [0, !Cidr [!Ref VpcCidr, 6, 6]]  #.#.#.#/22
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-alb-public-subnet-1a"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Public Subnet for ALB and NAT Gateway (main)
  
  PrivateEcsSubnet2a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [1, !Cidr [!Ref VpcCidr, 6, 6]]
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-ecs-private-subnet-2a"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Private Subnet for ECS (main)

  PrivateDbSubnet3a:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [2, !Cidr [!Ref VpcCidr, 6, 6]]
      AvailabilityZone: !Select
        - 0
        - !GetAZs ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-aurora-private-subnet-3a"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Private Subnet for Aurora (main)

  PublicAlbSubnet1b:  
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [3, !Cidr [!Ref VpcCidr, 6, 6]]
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-alb-public-subnet-1b"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Public Subnet for ALB (backup)

  PublicEcsSubnet2b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [4, !Cidr [!Ref VpcCidr, 6, 6]]
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-ecs-public-subnet-2b"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Public Subnet for ECS (backup)

  PrivateDbSubnet3b:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: !Select [5, !Cidr [!Ref VpcCidr, 6, 6]]
      AvailabilityZone: !Select
        - 1
        - !GetAZs ""
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-aurora-private-subnet-3b"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
    # Private Subnet for Aurora (backup)

    # Private route tables created in endpoints.yaml


  # ----------------------
  # Route Tables
  # ----------------------

  PublicAlbSubnet1aRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-alb-public1a-rt"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment
  
  PublicAlbSubnet1aInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicAlbSubnet1aRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  
  PublicAlbSubnet1aAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicAlbSubnet1a
      RouteTableId: !Ref PublicAlbSubnet1aRouteTable

  PublicAlbSubnet1bRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Name
          Value: !Sub "${ProjectName}-${Environment}-alb-public1b-rt"
        - Key: Project
          Value: !Ref ProjectName
        - Key: Environment
          Value: !Ref Environment

  PublicAlbSubnet1bInternetRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicAlbSubnet1bRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnet1bAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref PublicAlbSubnet1b
      RouteTableId: !Ref PublicAlbSubnet1bRouteTable


Outputs:

  VpcId:
    Description: VPC ID
    Value: !Ref VPC
  
  AzA:
    Description: Primary Availability Zone of main resources
    Value: !Select [0, !GetAZs ""]

  AzB:
    Description: Backup Availability Zone of failover resources
    Value: !Select [1, !GetAZs ""]
  
  PublicAlbSubnet1a:
    Description: Public subnet for ALB and NAT Gateway in AvailabilityZone-A (main)
    Value: !Ref PublicAlbSubnet1a
  
  PrivateEcsSubnet2a:
    Description: Private subnet for ECS in AvailabilityZone-A (main)
    Value: !Ref PrivateEcsSubnet2a
  
  PrivateDbSubnet3a:
    Description: Private subnet for Aurora in AvailabilityZone-A (main)
    Value: !Ref PrivateDbSubnet3a

  PublicAlbSubnet1b:
    Description: Public subnet for ALB in AvailabilityZone-B (backup)
    Value: !Ref PublicAlbSubnet1b
  
  PublicEcsSubnet2b:
    Description: Public subnet for ECS in AvailabilityZone-B (backup)
    Value: !Ref PublicEcsSubnet2b
  
  PrivateDbSubnet3b:
    Description: Private subnet for Aurora in AvailabilityZone-B (backup)
    Value: !Ref PrivateDbSubnet3b
  
  InternetGatewayId:
    Description: Internet Gateway Id
    Value: !Ref InternetGateway
